Small addition to our page content

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,9 @@
  	<title>Hello Dev</title>
  </head>
  <body>
- <h1> Hello Dev ! How is your Day</h1>
+ <p> 
+ 	<h1> Hello Dev ! How is your Day</h1>
+ 	Welcome to everyone. Let's Start Our Journey!! Tra la la
+</p>
  </body>
  </html>
